# oracle

./: .env.example  .gitignore  CLAUDE.md  README.md  forecasting-harness-spec.md  pyproject.toml
.claude/: settings.json
.github/workflows/: oracle-brain.yml  oracle-cron.yml
data/evidence/: F-20260705-001.md  F-20260705-002.md  F-20260705-003.md  (+17 more)
docs/: forecasting-harness-spec.md
knowledge/: lessons.md  process-checklist.md
reports/: F-20260705-001.md  F-20260705-002.md  F-20260705-003.md  F-20260705-004.md  F-20260705-005.md  F-20260705-006.md  F-20260705-007.md  F-20260705-008.md  F-20260705-009.md  F-20260705-010.md  F-20260705-011.md  F-20260705-012.md  F-20260705-013.md  F-20260705-014.md  F-20260705-015.md  F-20260705-016.md  F-20260705-017.md  F-20260705-018.md  F-20260705-019.md  F-20260705-020.md  pnl.md  scoreboard.md
scripts/: smoke_connectors.py
site/: Q-20260705-001.html  Q-20260705-002.html  Q-20260705-003.html  Q-20260705-008.html  Q-20260705-009.html  Q-20260705-010.html  Q-20260705-011.html  Q-20260705-012.html  Q-20260705-013.html  Q-20260705-014.html  Q-20260705-015.html  Q-20260705-016.html  Q-20260705-017.html  Q-20260705-018.html  Q-20260705-019.html  Q-20260705-020.html  Q-20260705-021.html  Q-20260705-022.html  Q-20260705-023.html  index.html
tests/: conftest.py  test_aggregation.py  test_automation.py  test_benchmarks.py  test_calibration.py  test_cli.py  test_connectors.py  test_importer.py  test_ledger.py  test_models.py  test_orchestration.py  test_report.py  test_resolution.py  test_scoring.py  test_site.py  test_web.py
(+217 files in other folders)
