[project]
name = "oracle"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "pydantic>=2.6", "click>=8.1", "httpx>=0.27", "numpy>=1.26",
  "scipy>=1.12", "matplotlib>=3.8", "jinja2>=3.1",
  "python-dateutil>=2.9", "python-dotenv>=1.0",
  "flask>=3.0", "markdown>=3.6",
]
[project.optional-dependencies]
dev = ["pytest>=8", "hypothesis>=6"]
[project.scripts]
oracle = "oracle.cli:main"
[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
[tool.uv]
package = true
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[tool.hatch.build.targets.wheel]
packages = ["src/oracle"]
